# fastapi_do_zero

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
App/controller/: user_controller.py
App/dependencias/: funcoes.py  utils.py
App/model/: schemas.py
fast_do_zero/: app.py
tests/: test_main.py
