[project]
name = "fast-do-zero"
version = "0.1.0"
description = ""
authors = [
  {name = "Gelzieny R. Martins",email = "gelzieny@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "fastapi[standard] (>=0.115.12,<0.116.0)",
  "uvicorn[standard] (>=0.34.0,<0.35.0)",
  "mkdocs (>=1.6.1,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
format = 'ruff format'
run = 'fastapi dev fast_do_zero/app.py'
test = 'pytest -s -x --cov=fast_de_zero -vv
pre_format = 'ruff check --fix'
pre_test = 'task lint'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"